# MCP-PokeVGC-Teambuilder

./: .gitignore  README.md  pyproject.toml  req-team.json  req-tools.json  requirements.txt
data/ilegal/: vgc2020.txt  vgc2022.txt
data/restricted/: vgc2022.txt
server/: main.py
server/core/: formats.py  models.py
server/schemas/: export_team.json  suggest_member.json  suggest_team.json
server/tools/: dataset.py  export.py  filters.py  roles.py  suggest.py  synergy.py
tests/: test_dataset.py  test_mcp.py  test_suggest.py  test_synergy.py
