[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vgc-team-builder-mcp"
version = "0.1.0"
description = "MCP Server para sugerencias de equipos VGC de Pokémon"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "Tu Nombre", email = "tu@email.com"}
]

dependencies = [
    "mcp>=0.1.0",
    "pydantic>=2.0.0",
]

[project.scripts]
vgc-team-builder = "main:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "mypy>=1.0.0",
]